Refactoring changes and adding new classes instead of using internal records